--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "scripts": {
     "lint": "eslint .",
     "test": "./node_modules/.bin/mocha test/**/*.test.js",
-    "posttest": "npm run lint && nsp check"
+    "posttest": "npm run lint && nsp check",
+    "postinstall": "node ./scripts/install"
   },
   "keywords": [
     "reverse",
@@ -29,6 +30,7 @@
   ],
   "dependencies": {
     "commander": "^2.9.0",
+    "fs-extra": "^1.0.0",
     "glob": "^7.1.1",
     "handlebars": "^4.0.6",
     "joi": "^10.0.1",
