--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "scripts": {
     "lint": "eslint .",
     "test": "./node_modules/.bin/mocha test/**/*.test.js",
-    "posttest": "npm run lint && nsp check"
+    "posttest": "npm run lint && nsp check",
+    "postinstall": "node scripts/npm-post-install"
   },
   "keywords": [
     "reverse",
@@ -30,6 +31,7 @@
   "dependencies": {
     "bluebird": "^3.4.6",
     "bunyan": "^1.8.5",
+    "chalk": "^1.1.3",
     "commander": "^2.9.0",
     "dolphin": "*",
     "fs-extra": "^1.0.0",
