--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "evoxy",
   "version": "0.1.0",
-  "description": "A reverse proxy server based on redbird",
+  "description": "A reverse proxy server envolved from redbird",
   "license": "MIT",
   "repository": "taoyuan/evoxy",
   "author": {
