--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "letsencrypt"
   ],
   "dependencies": {
+    "arrify": "^1.0.1",
     "bluebird": "^3.4.6",
     "bunyan": "^1.8.5",
     "chalk": "^1.1.3",
