--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   ],
   "dependencies": {
     "arrify": "^1.0.1",
-    "bluebird": "^3.4.6",
+    "bluebird": "^3.4.7",
     "bunyan": "^1.8.5",
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
@@ -37,18 +37,18 @@
     "fs-extra": "^1.0.0",
     "glob": "^7.1.1",
     "handlebars": "^4.0.6",
-    "http-proxy": "^1.15.2",
-    "joi": "^10.0.1",
+    "http-proxy": "^1.16.2",
+    "joi": "^10.1.0",
     "js-yaml": "^3.7.0",
-    "json5": "^0.5.0",
+    "json5": "^0.5.1",
     "le-challenge-fs": "^2.0.8",
     "le-challenge-sni": "^2.0.1",
     "le-sni-auto": "^2.1.0",
     "le-store-certbot": "^2.0.3",
     "letsencrypt": "^2.1.8",
     "localhost.daplie.com-certificates": "^1.2.3",
-    "lodash": "^4.17.2",
-    "lru-cache": "^4.0.1",
+    "lodash": "^4.17.4",
+    "lru-cache": "^4.0.2",
     "minimatch": "^3.0.3",
     "node-alias": "^1.0.4",
     "node-etcd": "^5.0.3",
@@ -59,10 +59,13 @@
     "url-parse": "^1.1.7",
     "valid-url": "^1.0.9"
   },
+  "optionalDependencies": {
+    "deasync": "0.1.9"
+  },
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
-    "eslint": "^3.11.0",
+    "eslint": "^3.13.1",
     "mocha": "^3.2.0",
     "nsp": "^2.6.2",
     "nyc": "^10.0.0"
