--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "lint": "eslint .",
     "test": "nyc mocha test/**/*.test.js",
     "posttest": "npm run lint && nsp check",
-    "postinstall": "node scripts/npm-post-install"
+    "postinstall": "node scripts/npm-post-install",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "keywords": [
     "reverse",
@@ -33,6 +34,7 @@
     "bunyan": "^1.8.5",
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
+    "coveralls": "^2.11.15",
     "dolphin": "*",
     "fs-extra": "^1.0.0",
     "glob": "^7.1.1",
