--- a/package.json
+++ b/package.json
@@ -30,44 +30,44 @@
   ],
   "dependencies": {
     "arrify": "^1.0.1",
-    "bluebird": "^3.4.7",
-    "bunyan": "^1.8.5",
+    "bluebird": "^3.5.0",
+    "bunyan": "^1.8.10",
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
-    "coveralls": "^2.11.16",
+    "coveralls": "^2.13.1",
     "dolphin": "*",
-    "fs-extra": "^2.0.0",
-    "glob": "^7.1.1",
-    "handlebars": "^4.0.6",
+    "fs-extra": "^3.0.1",
+    "glob": "^7.1.2",
+    "greenlock": "^2.1.15",
+    "handlebars": "^4.0.10",
     "http-proxy": "^1.16.2",
-    "joi": "^10.2.2",
-    "js-yaml": "^3.8.1",
+    "joi": "^10.5.0",
+    "js-yaml": "^3.8.4",
     "json5": "^0.5.1",
     "le-challenge-fs": "^2.0.8",
     "le-challenge-sni": "^2.0.1",
-    "le-sni-auto": "^2.1.0",
-    "le-store-certbot": "^2.0.3",
-    "letsencrypt": "^2.1.8",
-    "localhost.daplie.com-certificates": "^1.2.5",
+    "le-sni-auto": "^2.1.1",
+    "le-store-certbot": "^2.0.5",
+    "localhost.daplie.me-certificates": "^1.3.2",
     "lodash": "^4.17.4",
     "lru-cache": "^4.0.2",
-    "minimatch": "^3.0.3",
+    "minimatch": "^3.0.4",
     "node-alias": "^1.0.4",
-    "node-etcd": "^5.0.3",
-    "object-hash": "^1.1.5",
+    "node-etcd": "^5.1.0",
+    "object-hash": "^1.1.8",
     "os-homedir": "^1.0.2",
     "safetimeout": "^0.1.1",
-    "spdy": "^3.4.4",
-    "url-parse": "^1.1.7",
+    "spdy": "^3.4.7",
+    "url-parse": "^1.1.9",
     "valid-url": "^1.0.9"
   },
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
-    "eslint": "^3.15.0",
-    "mocha": "^3.2.0",
-    "nsp": "^2.6.2",
-    "nyc": "^10.1.2"
+    "eslint": "^3.19.0",
+    "mocha": "^3.4.1",
+    "nsp": "^2.6.3",
+    "nyc": "^10.3.2"
   },
   "nyc": {
     "reporter": [
